fixed the issue with cart link and user account link not aligning properly

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -13,7 +13,9 @@ html {
 .text-black {
     color: black !important;
 }
-
+li .list-inline-item {
+    display: inline-flex;
+}
 /*------------------------------------- Media Queries */
 
 @media (min-width: 1200px) {
